# thingyjp-dnsd

./: meson.build  nssmodule.c  nssmodule.h
